7904182: Release jtreg 8.3
Reviewed-by: iris, jpai